--- a/SFSdotNetFrameworkSecurity.config
+++ b/SFSdotNetFrameworkSecurity.config
@@ -4,9 +4,14 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 
+
 <configuration>
   <connectionStrings>
-    <add name="SFSdotNetFrameworkSecurityContext" connectionString="metadata=res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.csdl|res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.ssdl|res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=sfs-20160118-1219;user id=sfsdev;password=sfsdev123;multipleactiveresultsets=True;App=sfsappweb&quot;"
+     <!--<add name="SFSdotNetFrameworkSecurityContext" connectionString="metadata=res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.csdl|res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.ssdl|res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=sfs-core;user id=sa;password=pass.word1;multipleactiveresultsets=True;App=sfsappweb&quot;"
+       providerName="System.Data.EntityClient" />-->
+  
+<add name="SFSdotNetFrameworkSecurityContext" connectionString="metadata=res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.csdl|res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.ssdl|res://SFSdotNet.Framework/Security.BusinessObjects.EF.SFSdotNetFrameworkSecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=y1c2zmxwr7.database.windows.net;initial catalog=sfs;user id=sfs_sql;password=pass.word1313;multipleactiveresultsets=True;App=sfsappweb&quot;"
        providerName="System.Data.EntityClient" />
+
   </connectionStrings>
 </configuration>
